--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- jQuery -->
-    <script src = 'https://code.jquery.com/jquery-3.5.1.min.js'></script>
+    <script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
     <!-- linking stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -16,21 +16,26 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <a href='' class="navbar-brand">
-           Leaderboard
+            Leaderboard
         </a>
         <ul class='navbar-nav'>
-            <li class='nav-item'><span id='minutesDisplay'>2</span><span>:</span><span id='secondsDisplay'>00</span></li>
+            <li class='nav-item' style="text-align: end;"><span id='minutesDisplay'>2</span><span>:</span><span
+                    id='secondsDisplay'>00</span></li>
+            <li class='nav-item'><span>Score: </span><span id='userPts'>0</span></li>
         </ul>
     </nav>
-    <main class='container' >
-        <div class='row justify-content-center' id='home-block'>
+    <main class='container'>
+        <section class='row justify-content-center' id='home-block'>
             <div class='row justify-content-center'>
                 <div class='col-8 col-xs-12 col-sm-10' id='home-content'>
                     <h2 style='margin-bottom: 3%;'>Coding Quiz Challenge</h2>
-                    <p>Test your full-stack knowledge against the world in this Coding Quiz Challenge! Begin the timed, two
+                    <p>Test your full-stack knowledge against the world in this Coding Quiz Challenge! Begin the timed,
+                        two
                         minute quiz by
-                        pressing the start button below. You will receive 10 points for a correct answer, and you will lose
-                        10 seconds from the clock for an incorrect answer. If the clock hits zero, the quiz will end!</p>
+                        pressing the start button below. You will receive 10 points for a correct answer, and you will
+                        lose
+                        10 seconds from the clock for an incorrect answer. If the clock hits zero, the quiz will end!
+                    </p>
                 </div>
             </div>
             <div class='row justify-content-center'>
@@ -38,18 +43,23 @@
                     <button type='button' id='start'>START</button>
                 </div>
             </div>
-        </div>
-        <div class='row' id='q-block'>
+        </section>
+
+        <section class='row' id='q-block'>
             <div class='col-8 col-xs-12 col-sm-10' id='q-content'>
                 <h3 class='question'>Placeholder</h3>
                 <ul class='choices'>
                 </ul>
                 <button type='button' id='continue'>Continue</button>
             </div>
-        </div>
+        </section>
+
+        <section class='row' id='alert'>
+            <h4 id='alert-message'></h4>
+        </section>
     </main>
     <!-- scripts and import data -->
-    <script defer type ='text/javascript' src='script.js'></script>
+    <script defer type='text/javascript' src='script.js'></script>
 </body>
 
 </html>
