leadboard feature implemented

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href='' class="navbar-brand" id='navigate'>
+        <a class="navbar-brand" id='navigate'>
             Leaderboard
         </a>
         <ul class='navbar-nav'>
@@ -49,7 +49,6 @@
                 <h3 class='question'>Placeholder</h3>
                 <ul class='choices'>
                 </ul>
-                <button type='button' class='btn btn-dark' id='continue'>Continue</button>
             </div>
         </section>
         <aside class='row' id='alert'>
@@ -73,6 +72,7 @@
                     <h1>Leaderboard</h1>
                     <ol id='championList'>
                     </ol>
+                    <button type="button" class='btn btn-dark' id='homeBtn'>Home</button>
                 </div>
             </div>
         </section>
