score display: minor bug fixes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section class='row' id='q-block'>
             <div class='col-8 col-xs-12 col-sm-10' id='q-content'>
-                <h3 class='question'>Placeholder</h3>
+                <h3 class='question'></h3>
                 <ul class='choices'>
                 </ul>
             </div>
